deployment/envs/dev/marketplace-gateway/service.yaml
---
# Source: marketplace-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace-gateway
  namespace: applications
  labels:
    app.kubernetes.io/name: marketplace-gateway
    app.kubernetes.io/component: marketplace-gateway
    app.kubernetes.io/part-of: applications
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
  selector:
    app.kubernetes.io/name: marketplace-gateway
